# master-data-management-api

./: .env.example  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 13ea6c8aa3ab_add_description_to_file_table.py  2f7250dcee53_add_total_column_in_file.py  300d3c404c3d_create_user_table.py  54beace3aee1_add_tables.py  695cc34c02c2_alter_file_id.py  b34f615f9568_add_dashboard.py  c6d49c9f1660_create_file_table.py  c830a823f23c_add_tasks_table.py  e212b16e066d_add_result_enum_to_file_type.py
app/: config.py  crud.py  db.py  main.py
app/auth/: routes.py
app/db/: base.py  engine.py
app/files/: models.py  routes.py
app/models/: file.py  task.py
app/routers/: auth.py  files.py  tasks.py  users.py
app/services/: auth.py
app/tasks/: routes.py
app/users/: crud.py  routes.py
app/utils/: auth.py
