[project]
name = "master-data-management-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Tinn-K", email = "tinn.kanjananuwat@gmail.com"},
]
dependencies = [
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.28",
    "python-dotenv>=1.0.1",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "dynaconf>=3.2.4",
    "orjson>=3.9.15",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.3",
    "boto3>=1.34.59",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "thefuzz>=0.22.1",
    "ipykernel>=6.29.3",
    "pandas>=2.2.1",
    "requests>=2.31.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
