[project]
name = "master-data-management-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Tinn-K", email = "tinn.kanjananuwat@gmail.com"},
]
dependencies = [
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.28",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.3",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose>=3.3.0",
    "thefuzz>=0.22.1",
    "boto3>=1.34.67",
    "pandas>=2.2.1",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
